test/expected/explain_f_typedef_ai.out
typedef int A[2]; explain A f()
         ^
10: error: function returning array; did you mean function returning pointer?
